manifests/ingress.yaml
# /learn_fornt_end_project/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: llm-app-frontend
  annotations:
    # 이 규칙을 처리할 Ingress Controller를 'nginx'로 지정합니다.
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    # - host: 여기에 나중에 실제 사용할 도메인을 적게 됩니다. (예: test.com)
    - host: "jinsoo.ai"
    #   지금은 비워두면, Ingress Controller가 할당하는 기본 IP 주소로 접속하게 됩니다.
      http:
        paths:
          # path: 루트 경로 ("/")를 의미합니다.
          - path: /
            # pathType: Prefix는 "/"로 시작하는 모든 경로를 의미하지만,
            #          다른 Ingress 규칙('/api')보다 우선순위가 낮아,
            #          "/api"를 제외한 나머지 모든 트래픽을 처리하게 됩니다.
            pathType: Prefix
            backend:
              service:
                # 방금 만든 프론트엔드 Service의 이름
                name: frontend-service
                port:
                  # 해당 Service의 포트
                  number: 80
